<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b_bati"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:text="@string/site_42"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_sainsain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:text="@string/site_SSN"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintStart_toEndOf="@id/b_bati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/s_sahi"
        android:text="@string/site_SS"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_bati"
        app:layout_constraintEnd_toEndOf="@+id/b_bati" />

    <Button
        android:id="@+id/s_pada"
        android:text="@string/site_SP"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/b_sainsain"
        app:layout_constraintStart_toStartOf="@+id/b_sainsain"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/asapurana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:text="@string/site_ASP"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/s_sahi"
        app:layout_constraintEnd_toEndOf="@+id/s_sahi"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/rate_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:height="100dp"

        android:onClick="buttonClickHandler"
        android:text="@string/rate_chart"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/s_pada"
        app:layout_constraintStart_toStartOf="@+id/s_pada"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/g_settings"
        android:text="@string/global_Settings"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:height="100dp"
        android:onClick="buttonClickHandler"
        android:textSize="18sp"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/rate_chart"
        app:layout_constraintStart_toStartOf="@+id/rate_chart"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>