<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlobalSettingsActivity">
    <!--label><-->
    <TextView
        android:id="@+id/label_base_price"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"

        android:paddingBottom="@dimen/bottomPading"
        android:textColor="@android:color/holo_red_dark"
        android:text="Price for \n3.9 x 8.0"
        android:textSize="12sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/base_price"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"
        android:maxLength="5"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:nextFocusDown="@id/save"

        android:paddingBottom="@dimen/bottomPading"

        app:layout_constraintStart_toEndOf="@+id/label_base_price"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_whatsapp"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"

        android:paddingBottom="@dimen/bottomPading"
        android:textColor="@android:color/holo_red_dark"
        android:text="WhatsApp#"
        android:textSize="12sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_base_price" />
        
	<EditText
        android:id="@+id/whatsAppNo"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"

        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"

        android:paddingBottom="@dimen/bottomPading"

        app:layout_constraintStart_toEndOf="@+id/label_whatsapp"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintTop_toBottomOf="@+id/base_price" />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"

        android:onClick="buttonClickHandler"
        android:text="@string/save"
        android:textSize="12sp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/base_price"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/ResetDB"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"

        android:onClick="resetTrasactions"
        android:text="@string/reset_db"
        android:textSize="12sp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

    <Button
        android:id="@+id/backup"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"

        android:onClick="backupCustomer"
        android:text="@string/backup_cust"
        android:textSize="12sp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ResetDB"
        app:layout_constraintTop_toBottomOf="@+id/ResetDB" />

    <Button
        android:id="@+id/list_all_cust"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="2dp"

        android:onClick="listAllCustomer"
        android:text="@string/all_cust"
        android:textSize="12sp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="@+id/backup"
        app:layout_constraintStart_toStartOf="@+id/backup"
        app:layout_constraintTop_toBottomOf="@+id/backup" />

    <Button
        android:id="@+id/whatsapp_cust"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="2dp"

        android:onClick="whatsappCustomer"
        android:text="@string/whatsapp_cust"

        android:textSize="12sp"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/list_all_cust"
        app:layout_constraintTop_toBottomOf="@+id/list_all_cust" />

    <EditText
        android:id="@+id/all_customer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:hint="List of all customers..."
        android:textIsSelectable="true"
        android:background="#D0D0D0"
        android:fadeScrollbars="true"
        android:focusable="true"

        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:gravity="left"
        android:visibility="invisible"

        app:layout_constraintTop_toBottomOf="@+id/whatsapp_cust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>